<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.frbentes.agendaac.view.activity.SignInActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/login_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize" />

    <LinearLayout
        android:id="@+id/ll_email_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edt_email"
            style="@style/DefaultEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:hint="@string/email_hint" >
            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/edt_password"
            style="@style/DefaultEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edt_password_margin_top"
            android:inputType="textPassword"
            android:maxLines="1"
            android:hint="@string/password_hint" />

        <LinearLayout
            android:id="@+id/ll_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/buttons_margin"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_login"
                style="@style/LoginButton"
                android:layout_width="@dimen/btn_login_width"
                android:layout_height="wrap_content"
                android:text="@string/login_button" />

            <Button
                android:id="@+id/btn_sign_up"
                style="@style/LoginButton"
                android:layout_width="@dimen/btn_login_width"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/buttons_margin"
                android:text="@string/sign_up_button" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
