<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.frbentes.agendaac.view.activity.NewAppointmentActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/new_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/form_padding"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edt_title"
                    style="@style/DefaultEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_title"
                    android:maxLines="1"
                    android:maxLength="60" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edt_description"
                    style="@style/DefaultEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_description"
                    android:maxLines="4"
                    android:maxLength="400" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edt_date"
                    style="@style/DefaultEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/list_arrow"
                    android:hint="@string/hint_date"
                    android:layout_weight="0.5"
                    android:maxLines="1" />

                <EditText
                    android:id="@+id/edt_time"
                    style="@style/DefaultEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/list_arrow"
                    android:hint="@string/hint_time"
                    android:layout_weight="0.5"
                    android:maxLines="1" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
