<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/rl_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/btn_remove">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title"
                style="@style/ItemText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Title"
                android:maxLines="1" />

            <TextView
                android:id="@+id/tv_description"
                style="@style/SubItemText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="description"
                android:maxLines="2" />

            <TextView
                android:id="@+id/tv_date"
                style="@style/SubItemText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="date"
                android:maxLines="1" />
        </LinearLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/btn_remove"
        android:layout_width="@dimen/btn_remove_width"
        android:layout_height="@dimen/btn_remove_height"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/btn_remove_margin"
        android:layout_marginRight="@dimen/btn_remove_margin"
        android:background="@drawable/selector_remove" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/rl_content"
        android:layout_marginTop="@dimen/vw_divider_margin_top"
        android:background="@color/listDivider" />
</RelativeLayout>

