<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.frbentes.agendaac.view.activity.NewAppointmentActivity">
    <item
        android:id="@+id/button_save"
        android:orderInCategory="101"
        android:title=""
        android:icon="@drawable/ic_check"
        android:enabled="true"
        app:showAsAction="always" />
</menu>
